tests/invalid/ontology/upgrade-object-type-invalid-regexp-change.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Test if upgrading an object type while changing the regexp attribute in an invalid way is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="string:10:mc" regexp="[a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
  <ontology>
    <objecttypes>
      <!-- Regexp is changed -->
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="2" data-type="string:10:mc" regexp="[0-9a-z]"/>
    </objecttypes>
    <concepts/>
    <eventtypes/>
    <sources/>
  </ontology>
</edxml>
